--- a/index.html
+++ b/index.html
@@ -1,21 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>future-web3-nexus</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+   <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="future-web3-nexus" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Title and Description -->
+  <title>eXchange1 Dashboard</title>
+  <meta name="description" content="Your smart Web3 dashboard for tracking and analyzing digital assets." />
+  <meta name="author" content="Ujjwal Dubey" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Open Graph Tags (for link previews like WhatsApp, Facebook, LinkedIn) -->
+  <meta property="og:title" content="eXchange1 Dashboard" />
+  <meta property="og:description" content="Manage your crypto portfolio efficiently with eXchange1 Dashboard." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://exchange1dashboard.netlify.app/cover.png" />
+  <meta property="og:url" content="https://exchange1dashboard.netlify.app/" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="eXchange1 Dashboard" />
+  <meta name="twitter:description" content="Your smart Web3 dashboard for crypto asset tracking." />
+  <meta name="twitter:image" content="https://exchange1dashboard.netlify.app/cover.png" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" />
+</head>
+
 
   <body>
     <div id="root"></div>
